refactor: make UpdateExpression DataSerializable
Signed-off-by: SettingDust <settingdust@gmail.com>